@@ -119,12 +119,11 @@ class FastAccelStepper {
   int move(int32_t move);
   int moveTo(int32_t position);
 #define MOVE_OK 0
-#define MOVE_ERR_OVERFLOW -1  // relative move has caused an overflow
 #define MOVE_ERR_NO_DIRECTION_PIN \
-  -2  // negative direction requested, but no direction pin defined
-#define MOVE_ERR_SPEED_IS_UNDEFINED -3
-#define MOVE_ERR_ACCELERATION_IS_UNDEFINED -4
-#define MOVE_ERR_STOP_ONGOING -5
+  -1 /* negative direction requested, but no direction pin defined */
+#define MOVE_ERR_SPEED_IS_UNDEFINED -2
+#define MOVE_ERR_ACCELERATION_IS_UNDEFINED -3
+#define MOVE_ERR_STOP_ONGOING -4
 
   // forwardStep()/backwardstep() can be called, while stepper is not moving
   // If stepper is moving, this is a no-op.
