@@ -2,6 +2,10 @@ pre 0.9.0:
 - implement forceStopAndNewPosition()
 - StepperDemo extended to cause forceStopAndNewPosition by press X
 - addQueueEntry() returns now an int8_t instead of an int
+- move and moveTo goes to the closest position (+/-2147483647).
+  This means continues move(1000) will let the stepper turn in same direction,
+  while the position wraps around: 0,1,...,2147483647,-2147483648,-2147483647,...,-1,0,1,...
+- StepperDemo extended to set position with press @
 
 0.8.3:
 - AVR: timer compare interrupts are only enabled, if stepper is running.
